manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
#  labels:
#    istio-injection: enabled
