manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
  selector:
    app: python-web
