manifest/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-virtual-service
  namespace: istio-system
spec:
  hosts:
    - "demo.example.com"
  gateways:
    - http-gateway
    - https-gateway
  http:
    - route:
        - destination:
            host: python-web.demo.svc.cluster.local
            port:
              number: 8080
